# rcuber

./: Cargo.toml  README.md
benches/: bench_solver.rs
src/: constants.rs  cubie.rs  error.rs  facelet.rs  generator.rs  lib.rs  main.rs  moves.rs  printer.rs  utils.rs
src/solver/: mod.rs
src/solver/cfop/: cross.rs  f2l.rs  mod.rs  oll.rs  pll.rs
src/solver/lbl/: bottom.rs  coll.rs  cpll.rs  cross.rs  daisy.rs  eoll.rs  epll.rs  middle.rs  mod.rs
src/solver/min2phase/: arraycube.rs  constants.rs  coord.rs  cubie.rs  mod.rs  solver.rs  tables.rs  utils.rs
src/solver/roux/: cmll.rs  fb.rs  left.rs  lse.rs  mod.rs  sb.rs  square.rs  utils.rs
