[package]
name = "rcuber"
version = "0.3.0"
edition = "2021"
description = "crate for rubiks cube and solver (CFOP, LBL)"
authors = [
  "Adun Gaos <adungaos@gmail.com>",
]
repository = "https://github.com/adungaos/rcuber"
keywords = ["rubiks-cube", "cube-solver", "cfop", "lbl"]
categories = ["algorithms"]
license = "MIT"
readme = "./README.md"

[lib]
bench = false

[[bin]]
bench = false
name = "rcuber"

[profile.dev]
opt-level = 1

[dependencies]
rand = "0.8.5"
thiserror = "1.0.61"
crossterm = {version = "0.27.0", optional = true }
static_init = "1.0.3"

[features]
default = ["term"]
term = ["crossterm"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_solver"
harness = false